WIP stemcell metadata is extracted from deployment manifest
- temporary pipeline (story-154051307) created for testing
- Stemcell is uploaded to director directly from bosh.io bucket and not
downloaded then re-uploaded by concourse

[#154051307]

Signed-off-by: Greg Patricio <gpatricio@pivotal.io>

--- a/tasks/export-release.yml
+++ b/tasks/export-release.yml
@@ -8,8 +8,8 @@ image_resource:
 
 inputs:
 - name: kubo-ci
-- name: stemcell
 - name: release
+- name: deployment
 
 outputs:
 - name: compiled-release
