Update gcp cloud config to match the default cloud config
[#154661250]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/manifests/ops-files/gcp-k8s-cloud-config-multiaz.yml
+++ b/manifests/ops-files/gcp-k8s-cloud-config-multiaz.yml
@@ -5,6 +5,8 @@
       zone: us-east1-b
 
 - type: replace
-  path: /networks/name=default/subnets/0/azs/1?
-  value: z2
+  path: /networks/name=default/subnets/0/azs?
+  value: [ z1, z2 ]
+- type: remove
+  path: /networks/name=default/subnets/0/az?
 
