Move cloud config env var logic to install bosh
The env variable CLOUD_CONFIG_OPS_FILE is used to set the correct cloud
config ops files to generate cc. Since the upload of cc is being moved
out of the deploy k8s, this env variable needs to be set as part of the
install bosh step.

[#154869857]

--- a/tasks/install-bosh.yml
+++ b/tasks/install-bosh.yml
@@ -8,6 +8,7 @@ run:
   path: git-kubo-ci/scripts/install-bosh.sh
 params:
   USE_TURBULENCE:
+  CLOUD_CONFIG_OPS_FILE: ~
 
 inputs:
 - name: git-kubo-ci
