--- a/tasks/run-k8s-integration-tests-ci.yml
+++ b/tasks/run-k8s-integration-tests-ci.yml
@@ -10,6 +10,7 @@ run:
 params:
   KUBERNETES_AUTHENTICATION_POLICY:
   DEPLOYMENT_NAME: ci-service
+  TEST_MULTI_AZ:
 
 inputs:
   - name: git-kubo-ci
